Add more CSS from the vglist rails app.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,8 @@
 @import './bulma-variables.scss';
 @import '~bulma/bulma';
+@import './padding-and-margins.scss';
+@import './utilities.scss';
+@import './home.scss';
 
 :root {
   color-scheme: light dark;
