Fix the logo not rendering in the navbar.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -249,6 +249,12 @@ nav.navbar {
     overflow: clip;
     object-fit: cover;
   }
+
+  // For the vglist logo in the navbar. Have to set the width here for some
+  // reason.
+  img.navbar-logo {
+    width: 80px;
+  }
 }
 
 .v-select {
