--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -265,6 +265,7 @@ nav.navbar {
   max-height: 400px;
   height: auto;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 // Customization for bulma dropdowns.
